# warntool

./: pyproject.toml  setup.py  url.sh
warntool/: __init__.py  warntool.py
